network-policies/l3-policy/no-08-egressall-same-ns.yaml
# this rule will help in defining the egress rules for app1 in dev namespace to all pods in same namespace

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app1-dev-egress-staging
  namespace: dev
spec:
  endpointSelector:
    matchLabels:
      app: app1
  egress:
  - toEndpoints:
    - {}
